Inicio da exploracao de dados

--- a/SpaceshipTitanic/SpaceshipTitanic.ipynb
+++ b/SpaceshipTitanic/SpaceshipTitanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -298,14 +298,14 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(r'Data\\train.csv', sep = ',')\n",
+    "df = pd.read_csv(r'Data\\train.csv', sep = ',') #Le o pdf\n",
     "\n",
-    "display(df)"
+    "display(df) #Visualizacao dos dados brutos"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,321 @@
     }
    ],
    "source": [
-    "df.dropna(inplace = True)\n",
+    "df.dropna(inplace = True) #Deleta dados invalidos\n",
+    "display(df) #Cerca de 2000 dados sao invalidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['TRAPPIST-1e' 'PSO J318.5-22' '55 Cancri e']\n"
+     ]
+    }
+   ],
+   "source": [
+    "HomePlanet_Categories = df['HomePlanet'].unique() #Categorias da coluna HomePlanet\n",
+    "Destination_Categories = df['Destination'].unique() #Categorias da coluna Destination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PassengerId</th>\n",
+       "      <th>HomePlanet</th>\n",
+       "      <th>CryoSleep</th>\n",
+       "      <th>Cabin</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>VIP</th>\n",
+       "      <th>RoomService</th>\n",
+       "      <th>FoodCourt</th>\n",
+       "      <th>ShoppingMall</th>\n",
+       "      <th>Spa</th>\n",
+       "      <th>VRDeck</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Transported</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0001_01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>66/0/80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Maham Ofracculy</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0002_01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>70/0/83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>109.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>549.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>Juanna Vines</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0003_01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>65/0/83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>3576.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6715.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>Altark Susent</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0003_02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>65/0/83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1283.0</td>\n",
+       "      <td>371.0</td>\n",
+       "      <td>3329.0</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>Solam Susent</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0004_01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>70/1/83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>303.0</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>Willy Santantines</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8688</th>\n",
+       "      <td>9276_01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>65/9/47</td>\n",
+       "      <td>3</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6819.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1643.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>Gravior Noxnuther</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8689</th>\n",
+       "      <td>9278_01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>True</td>\n",
+       "      <td>71/1/57</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Kurta Mondalley</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8690</th>\n",
+       "      <td>9279_01</td>\n",
+       "      <td>2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>71/1/48</td>\n",
+       "      <td>1</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1872.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>Fayey Connon</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8691</th>\n",
+       "      <td>9280_01</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>69/6/56</td>\n",
+       "      <td>3</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1049.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>353.0</td>\n",
+       "      <td>3235.0</td>\n",
+       "      <td>Celeon Hontichre</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8692</th>\n",
+       "      <td>9280_02</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>69/6/56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>False</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>4688.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>Propsh Hontichre</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>6606 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     PassengerId  HomePlanet CryoSleep    Cabin  Destination   Age    VIP  \\\n",
+       "0        0001_01           1     False  66/0/80            1  39.0  False   \n",
+       "1        0002_01           2     False  70/0/83            1  24.0  False   \n",
+       "2        0003_01           1     False  65/0/83            1  58.0   True   \n",
+       "3        0003_02           1     False  65/0/83            1  33.0  False   \n",
+       "4        0004_01           2     False  70/1/83            1  16.0  False   \n",
+       "...          ...         ...       ...      ...          ...   ...    ...   \n",
+       "8688     9276_01           1     False  65/9/47            3  41.0   True   \n",
+       "8689     9278_01           2      True  71/1/57            2  18.0  False   \n",
+       "8690     9279_01           2     False  71/1/48            1  26.0  False   \n",
+       "8691     9280_01           1     False  69/6/56            3  32.0  False   \n",
+       "8692     9280_02           1     False  69/6/56            1  44.0  False   \n",
+       "\n",
+       "      RoomService  FoodCourt  ShoppingMall     Spa  VRDeck               Name  \\\n",
+       "0             0.0        0.0           0.0     0.0     0.0    Maham Ofracculy   \n",
+       "1           109.0        9.0          25.0   549.0    44.0       Juanna Vines   \n",
+       "2            43.0     3576.0           0.0  6715.0    49.0      Altark Susent   \n",
+       "3             0.0     1283.0         371.0  3329.0   193.0       Solam Susent   \n",
+       "4           303.0       70.0         151.0   565.0     2.0  Willy Santantines   \n",
+       "...           ...        ...           ...     ...     ...                ...   \n",
+       "8688          0.0     6819.0           0.0  1643.0    74.0  Gravior Noxnuther   \n",
+       "8689          0.0        0.0           0.0     0.0     0.0    Kurta Mondalley   \n",
+       "8690          0.0        0.0        1872.0     1.0     0.0       Fayey Connon   \n",
+       "8691          0.0     1049.0           0.0   353.0  3235.0   Celeon Hontichre   \n",
+       "8692        126.0     4688.0           0.0     0.0    12.0   Propsh Hontichre   \n",
+       "\n",
+       "      Transported  \n",
+       "0           False  \n",
+       "1            True  \n",
+       "2           False  \n",
+       "3           False  \n",
+       "4            True  \n",
+       "...           ...  \n",
+       "8688        False  \n",
+       "8689        False  \n",
+       "8690         True  \n",
+       "8691        False  \n",
+       "8692         True  \n",
+       "\n",
+       "[6606 rows x 14 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#Troca as categorias HomePlanet e Destination por valores numericos inteiros\n",
+    "for cat, i in zip(HomePlanet_Categories, range(1, 4)): df['HomePlanet'].replace(cat, i, inplace = True)\n",
+    "for cat, i in zip(Destination_Categories, range(1, 4)): df['Destination'].replace(cat, i, inplace = True)\n",
+    "\n",
+    "#Troca os valores characters da coluna Cabin pelos respectivos inteiros da ASCII\n",
+    "Cabin_col = np.array(df['Cabin'], dtype = str)\n",
+    "for i in range(len(df['Cabin'])): \n",
+    "    df['Cabin'].replace(Cabin_col[i], f'{ord(Cabin_col[i][0])}/{int(Cabin_col[i][2])}/{ord(Cabin_col[i][4])}', inplace = True)\n",
+    "\n",
+    "#Nova visualizacao dos dados\n",
     "display(df)"
    ]
   },
@@ -595,28 +909,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#Proximo a fazer: trocar valores booleanos (colunas VIP, CryoSleep e Transported) por inteiros\n",
+    "#Por exemplo: False -> 0 e True -> 1"
+   ]
   }
  ],
  "metadata": {
