Apagando o cupy pq a criancada nao tem GPU

--- a/SpaceshipTitanic/SpaceshipTitanic.ipynb
+++ b/SpaceshipTitanic/SpaceshipTitanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,7 @@
     "import pandas as pd #Importacao de dados\n",
     "import numpy as np #Numerico\n",
     "import scipy as sp #Numerico\n",
-    "import numba as nb #Just in time\n",
-    "import cupy as cp #GPU"
+    "import numba as nb #Just in time"
    ]
   },
   {
