--- a/SpaceshipTitanic/SpaceshipTitanic.ipynb
+++ b/SpaceshipTitanic/SpaceshipTitanic.ipynb
@@ -916,7 +916,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "KaggleGel",
    "language": "python",
    "name": "python3"
   },
@@ -930,7 +930,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
