Nao sei o que colocar desculpa leo

--- a/SpaceshipTitanic/SpaceshipTitanic.ipynb
+++ b/SpaceshipTitanic/SpaceshipTitanic.ipynb
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -977,6 +977,9 @@
        "      <th>VRDeck</th>\n",
        "      <th>Name</th>\n",
        "      <th>Transported</th>\n",
+       "      <th>cabin1</th>\n",
+       "      <th>cabin2</th>\n",
+       "      <th>cabin3</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -996,6 +999,9 @@
        "      <td>0.0</td>\n",
        "      <td>Maham Ofracculy</td>\n",
        "      <td>0</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1013,6 +1019,9 @@
        "      <td>44.0</td>\n",
        "      <td>Juanna Vines</td>\n",
        "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1030,6 +1039,9 @@
        "      <td>49.0</td>\n",
        "      <td>Altark Susent</td>\n",
        "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1047,6 +1059,9 @@
        "      <td>193.0</td>\n",
        "      <td>Solam Susent</td>\n",
        "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1064,9 +1079,15 @@
        "      <td>2.0</td>\n",
        "      <td>Willy Santantines</td>\n",
        "      <td>1</td>\n",
+       "      <td>70</td>\n",
+       "      <td>1</td>\n",
+       "      <td>83</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1098,6 +1119,9 @@
        "      <td>74.0</td>\n",
        "      <td>Gravior Noxnuther</td>\n",
        "      <td>0</td>\n",
+       "      <td>65</td>\n",
+       "      <td>9</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8689</th>\n",
@@ -1115,6 +1139,9 @@
        "      <td>0.0</td>\n",
        "      <td>Kurta Mondalley</td>\n",
        "      <td>0</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8690</th>\n",
@@ -1132,6 +1159,9 @@
        "      <td>0.0</td>\n",
        "      <td>Fayey Connon</td>\n",
        "      <td>1</td>\n",
+       "      <td>71</td>\n",
+       "      <td>1</td>\n",
+       "      <td>48</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8691</th>\n",
@@ -1149,6 +1179,9 @@
        "      <td>3235.0</td>\n",
        "      <td>Celeon Hontichre</td>\n",
        "      <td>0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>6</td>\n",
+       "      <td>56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8692</th>\n",
@@ -1166,10 +1199,13 @@
        "      <td>12.0</td>\n",
        "      <td>Propsh Hontichre</td>\n",
        "      <td>1</td>\n",
+       "      <td>69</td>\n",
+       "      <td>6</td>\n",
+       "      <td>56</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6606 rows × 14 columns</p>\n",
+       "<p>6606 rows × 17 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1199,20 +1235,20 @@
        "8691          0.0     1049.0           0.0   353.0  3235.0   Celeon Hontichre   \n",
        "8692        126.0     4688.0           0.0     0.0    12.0   Propsh Hontichre   \n",
        "\n",
-       "      Transported  \n",
-       "0               0  \n",
-       "1               1  \n",
-       "2               0  \n",
-       "3               0  \n",
-       "4               1  \n",
-       "...           ...  \n",
-       "8688            0  \n",
-       "8689            0  \n",
-       "8690            1  \n",
-       "8691            0  \n",
-       "8692            1  \n",
+       "      Transported cabin1 cabin2 cabin3  \n",
+       "0               0     66      0     80  \n",
+       "1               1     70      0     83  \n",
+       "2               0     65      0     83  \n",
+       "3               0     65      0     83  \n",
+       "4               1     70      1     83  \n",
+       "...           ...    ...    ...    ...  \n",
+       "8688            0     65      9     47  \n",
+       "8689            0     71      1     57  \n",
+       "8690            1     71      1     48  \n",
+       "8691            0     69      6     56  \n",
+       "8692            1     69      6     56  \n",
        "\n",
-       "[6606 rows x 14 columns]"
+       "[6606 rows x 17 columns]"
       ]
      },
      "metadata": {},
@@ -1226,8 +1262,64 @@
     "df['CryoSleep'] = df['CryoSleep'].astype(int)\n",
     "df['Transported'] = df['Transported'].astype(int)\n",
     "\n",
+    "# Splitando colunas da cabine\n",
+    "df[['cabin1', 'cabin2', 'cabin3']] = df['Cabin'].str.split('/', expand=True)\n",
     "display(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        HomePlanet    CryoSleep  Destination          Age          VIP  \\\n",
+      "count  6606.000000  6606.000000  6606.000000  6606.000000  6606.000000   \n",
+      "mean      1.953678     0.353012     1.520285    28.894036     0.024523   \n",
+      "std       0.676839     0.477943     0.821990    14.533429     0.154678   \n",
+      "min       1.000000     0.000000     1.000000     0.000000     0.000000   \n",
+      "25%       1.000000     0.000000     1.000000    19.000000     0.000000   \n",
+      "50%       2.000000     0.000000     1.000000    27.000000     0.000000   \n",
+      "75%       2.000000     1.000000     2.000000    38.000000     0.000000   \n",
+      "max       3.000000     1.000000     3.000000    79.000000     1.000000   \n",
+      "\n",
+      "       RoomService     FoodCourt  ShoppingMall           Spa        VRDeck  \\\n",
+      "count  6606.000000   6606.000000   6606.000000   6606.000000   6606.000000   \n",
+      "mean    222.991674    478.958523    178.356494    313.161520    303.780048   \n",
+      "std     644.987936   1678.592291    576.328407   1144.016291   1127.142166   \n",
+      "min       0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "25%       0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "50%       0.000000      0.000000      0.000000      0.000000      0.000000   \n",
+      "75%      49.000000     82.750000     30.000000     65.000000     52.000000   \n",
+      "max    9920.000000  29813.000000  12253.000000  22408.000000  20336.000000   \n",
+      "\n",
+      "       Transported  \n",
+      "count  6606.000000  \n",
+      "mean      0.503633  \n",
+      "std       0.500025  \n",
+      "min       0.000000  \n",
+      "25%       0.000000  \n",
+      "50%       1.000000  \n",
+      "75%       1.000000  \n",
+      "max       1.000000  \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# Estatísticas básicas\n",
+    "print(df.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
